{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 26,
  "lineage": "d86ecade-229a-a1be-07d9-bf988239a841",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0089d3861652666",
            "arn": "arn:aws:ec2:ap-south-1:059801127776:elastic-ip/eipalloc-0c0089d3861652666",
            "domain": "vpc",
            "id": "eipalloc-0c0089d3861652666",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-108-231-251.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.231.251",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09eb3ec45518ec5a3",
            "arn": "arn:aws:ec2:ap-south-1:059801127776:elastic-ip/eipalloc-09eb3ec45518ec5a3",
            "domain": "vpc",
            "id": "eipalloc-09eb3ec45518ec5a3",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-204-227-79.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.227.79",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:internet-gateway/igw-04fbca688922fdf86",
            "id": "igw-04fbca688922fdf86",
            "owner_id": "059801127776",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-dev-igw"
            },
            "tags_all": {
              "Name": "eks-dev-igw"
            },
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0089d3861652666",
            "association_id": "eipassoc-06f76ec5a4b9a7cfd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04ed7ffca77bc03c9",
            "network_interface_id": "eni-065ba9e20a9f1d171",
            "private_ip": "10.0.1.93",
            "public_ip": "3.108.231.251",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-059ad3ceade0d5b59",
            "tags": {
              "Name": "eks-dev-nat-1"
            },
            "tags_all": {
              "Name": "eks-dev-nat-1"
            },
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09eb3ec45518ec5a3",
            "association_id": "eipassoc-0926658f3c0d3af3a",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02f7b71cbb70bc046",
            "network_interface_id": "eni-0764083cde09ff5ce",
            "private_ip": "10.0.2.163",
            "public_ip": "13.204.227.79",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017c68edf9388b87f",
            "tags": {
              "Name": "eks-dev-nat-2"
            },
            "tags_all": {
              "Name": "eks-dev-nat-2"
            },
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:route-table/rtb-089532a3da74707ae",
            "id": "rtb-089532a3da74707ae",
            "owner_id": "059801127776",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04ed7ffca77bc03c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-dev-private-rt-1"
            },
            "tags_all": {
              "Name": "eks-dev-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:route-table/rtb-09b02c9b82d03dce4",
            "id": "rtb-09b02c9b82d03dce4",
            "owner_id": "059801127776",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02f7b71cbb70bc046",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-dev-private-rt-2"
            },
            "tags_all": {
              "Name": "eks-dev-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:route-table/rtb-0793460a2b39b024b",
            "id": "rtb-0793460a2b39b024b",
            "owner_id": "059801127776",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fbca688922fdf86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-dev-public-rt"
            },
            "tags_all": {
              "Name": "eks-dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c2b5f73f4fbfc08",
            "region": "ap-south-1",
            "route_table_id": "rtb-089532a3da74707ae",
            "subnet_id": "subnet-03a5508af94695b0d"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02543e0a171d2819e",
            "region": "ap-south-1",
            "route_table_id": "rtb-09b02c9b82d03dce4",
            "subnet_id": "subnet-01ae6cd943d236c43"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064af592a1837c9e0",
            "region": "ap-south-1",
            "route_table_id": "rtb-0793460a2b39b024b",
            "subnet_id": "subnet-059ad3ceade0d5b59"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d5af78d305f448e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0793460a2b39b024b",
            "subnet_id": "subnet-017c68edf9388b87f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:subnet/subnet-03a5508af94695b0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a5508af94695b0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059801127776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-dev-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-dev-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:subnet/subnet-01ae6cd943d236c43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ae6cd943d236c43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "059801127776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-dev-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-dev-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:subnet/subnet-059ad3ceade0d5b59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059ad3ceade0d5b59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "059801127776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-dev-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-dev-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:subnet/subnet-017c68edf9388b87f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017c68edf9388b87f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "059801127776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-dev-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "eks-dev-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00f3e99e320817bae"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:059801127776:vpc/vpc-00f3e99e320817bae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08ed944d4ee573300",
            "default_route_table_id": "rtb-0a35d5718b3b8b8d6",
            "default_security_group_id": "sg-07597c6630aab5361",
            "dhcp_options_id": "dopt-04ed933a3defac4fa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f3e99e320817bae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a35d5718b3b8b8d6",
            "owner_id": "059801127776",
            "region": "ap-south-1",
            "tags": {
              "Name": "eks-dev-vpc"
            },
            "tags_all": {
              "Name": "eks-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}